widget/nsIWidgetListener.h
@@ -134,6 +134,11 @@ public:
   virtual void DidPaintWindow() { }
 
   /**
+   * Request that layout schedules a repaint on the next refresh driver tick.
+   */
+  virtual void RequestRepaint() { }
+
+  /**
    * Handle an event.
    */
   virtual nsEventStatus HandleEvent(nsGUIEvent* event, bool useAttachedEvents)
